# succosim_storm_pwo

./: .gitignore  LICENSE  README.md
succosim/: CMakeLists.txt  main.cc  mesh_cylindrical.ipynb  runall.sh
succosim/include/: ActionInitialization.hh  Analysis.hh  BetheHeitlerModel.hh  Bremsstrahlungcorrection.hh  CustomConfigs.hh  CustomHit.hh  CustomSD.hh  DetectorConstruction.hh  EmStandardPhysics.hh  EventAction.hh  GammaConversion.hh  GammaConversionAmorph.hh  GammaConversionCrystal.hh  LogicalCrystalVolume.hh  PairProductionRelModel.hh  PairProductioncorrection.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SeltzerBergerModel.hh  SeltzerBergerModel_electron.hh  SeltzerBergerModel_positron.hh  TestMode.cc  eBremsstrahlungAmorph.hh  eBremsstrahlungRelModel.hh  eBremsstrahlungRelModel_electron.hh  eBremsstrahlungRelModel_positron.hh  eBremsstrahlung_electron.hh  eBremsstrahlung_positron.hh
succosim/macros/: base_100evs.mac  base_10evs.mac  base_10kevs.mac  base_1kevs.mac  calib_100gev.mac  calib_120gev.mac  calib_20gev.mac  calib_40gev.mac  calib_60gev.mac  calib_80gev.mac  conf_axial.mac  conf_random.mac  gui.mac  run_100kevs.mac  run_200kevs.mac  run_20kevs.mac  run_25kevs.mac  run_300kevs.mac  run_50kevs.mac  run_mesh_1000GeV_100evs.mac  run_mesh_1000GeV_1kevs.mac  run_mesh_100GeV_100evs.mac  run_mesh_100GeV_1kevs.mac  run_mesh_10GeV_1kevs.mac  run_mesh_120GeV_100evs.mac  run_mesh_1GeV_1kevs.mac
succosim/src/: ActionInitialization.cc  BetheHeitlerModel.cc  Bremsstrahlungcorrection.cc  CustomConfigs.cc  CustomHit.cc  CustomSD.cc  EventAction.cc  (+20 more)
